[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://FontData.tres" type="Theme" id=2]
[ext_resource path="res://RadioCanada-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/cog.png" type="Texture" id=4]
[ext_resource path="res://SettingsWindow.tscn" type="PackedScene" id=5]
[ext_resource path="res://MenuMusic.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/Jump_King_screenshot_1.png" type="Texture" id=7]
[ext_resource path="res://PlayerSprites/idle.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Fade"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Reward:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1.2, 1.5, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Reward:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 6.10352e-05, 0 )
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
polygon = PoolVector2Array( -16, -16, -16.0001, 784, 1040, 784, 1040, -16 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.227451 )
position = Vector2( 509.333, 384 )
scale = Vector2( 0.555556, 0.555556 )
texture = ExtResource( 7 )

[node name="Idle" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.494118 )
position = Vector2( 638.444, 350.444 )
scale = Vector2( 0.225695, 0.225695 )
texture = ExtResource( 8 )

[node name="ButtonPlay" type="Button" parent="."]
margin_left = 384.0
margin_top = 488.0
margin_right = 640.0
margin_bottom = 560.0
theme = ExtResource( 2 )
text = "Play"

[node name="ButtonExit" type="Button" parent="."]
margin_left = 384.0
margin_top = 600.0
margin_right = 640.0
margin_bottom = 672.0
theme = ExtResource( 2 )
text = "Exit"

[node name="Label" type="Label" parent="."]
margin_left = 416.0
margin_top = 48.0
margin_right = 609.0
margin_bottom = 177.0
theme = SubResource( 2 )
text = "Jump Knight

Marian Ver."
align = 1

[node name="MenuMusic" parent="." instance=ExtResource( 6 )]

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 64.0

[node name="Cog" type="Sprite" parent="SettingsButton"]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 20, 20 )
scale = Vector2( 0.0390625, 0.0390625 )
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SettingsWindow" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Reward" type="Label" parent="."]
margin_left = 328.0
margin_top = 152.0
margin_right = 697.0
margin_bottom = 177.0
theme = ExtResource( 2 )
text = "There is a smoking hot babe at the top!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="pressed" from="ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
